--- a/explanatory.ipynb
+++ b/explanatory.ipynb
@@ -71,7 +71,8 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [],
+    "toc-hr-collapsed": true
    },
    "source": [
     "## Demography\n",
